- Made MySqlDateTime serializable (MySQL bug #40555, Oracle bug #11750161).
- Return datetime values for timestamp fields as DateTimeKind.Local (MySQL bug #63812, Oracle bug #13591554)
- Fix for "Connector/Net Generates Incorrect SELECT Clause after UPDATE" (MySql bug #62134, Oracle bug #13491689). 
- Fix for Error on intellisense when typing "-" (Orable Bug #13522344). 
- Fixed creation Trigger dialog bug (Oracle bug #13511801)
- Fix for VS IS SHOWING AN ERROR WHEN TRYING TO CREATE A FOREIGN KEY (Oracle bug #13511776).
- Fix for Error when changing data length in table designer in varchar columns. (Oracle bug #13611677).
- Fix for Bug in Visual Studio Table Designer on editing column name the changes were not visually detected until focus is switched (Oracle bug #13613755).
- Fix for VS let you close the FK dialog even when the created FK do not have any data (Oracle bug #13613839).
- Fix for error when creating index through VS table designer. (Oracle bug # 13613765 - INDEX/KEYS ERROR MODIFYING COLUMNS FIELD).
- Fix on Bug #62801 (mysql.dev) #13491698 Orabug DB Strange behaviour with Include in LINQ-to-Entities. Changes on SelectStatement class on method GetDefaultColumnsForFragment to assign the table name when adding a new column. 
  The table name added for the new column had the wrong context of the fragment which was the cause of the problem. This fix assign the context right after the creation of the new ColumnFragment object. 
  Added Unit Tests VS2010 and VS2008.
- Fix for EF4.1, Code First, CreateDatabaseScript() generates an invalid MySQL script (MySQL bug #62150, Oracle bug #13582837).
- Fix for Connections not closed properly when using pooling (MySql bug #63942, Oracle bug #13629471).
- Changed behavior when MySqlCommand.CommandText is null, now it throws an InvalidOperationException instead of 
  NullReferenceException on ExecuteReader (MySql bug #64092, Oracle bug #13624659)